<resources>
    <string name="app_name">Můj byt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">jakub@spilacek.cz</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Nastavení</string>
    <string name="hostdb">Host</string>
    <string name="namedb">Název databáze</string>
    <string name="userdb">Uživatel</string>
    <string name="passworddb">Heslo</string>
    <string name="btnSave">Uložit</string>
    <string name="btnTestConn">Vyzkoušet spojení</string>
    <string name="nav_Person">Seznam osob</string>
    <string name="nav_Apartment">Seznam bytů</string>
    <string name="nav_Overview">Přehled</string>
    <string name="nav_WeekProgram">Týdenní program</string>
    <string name="btnDeletePerson">Smazat</string>
    <string name="personName">Jméno</string>
    <string name="personEmail">Email</string>
    <string name="personBirth">Datum narození</string>
    <string name="personCompanyName">Název společnosti</string>
    <string name="personRights">Práva</string>
    <string name="personTask">Úloha</string>
    <string name="personSuperiorId">Nadřízená osoba</string>
    <string name="apartmentRenterName">Jméno nájemce</string>
    <string name="apartmentFloor">Patro</string>
    <string name="apartmentRooms">Počet pokojů</string>
    <string name="apartmentUsableArea">Plocha</string>
    <string name="overviewBtnHistory">Historie</string>
    <string name="overviewBtnPrevious">Přechozí</string>
    <string name="overviewBtnFollowing">Následující</string>
    <string name="overviewTxvDate">Datum</string>
    <string name="overviewTxvWater">Spotřeba vody</string>
    <string name="overviewTxvGas">Spotřeba plynu</string>
    <string name="overviewTxvElectricity">Spotřeba elekřiny</string>
    <string name="overviewTxvAvgTemp">Průměrná teplota</string>
    <string name="overviewTxvTenant">Nájemce</string>

    <string name="title_activity_person_edit">Uživatel</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
