<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_apartment"
            android:icon="@drawable/apartment"
            android:title="@string/nav_Apartment" />
        <item
            android:id="@+id/nav_person"
            android:icon="@drawable/person"
            android:title="@string/nav_Person" />
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/overview"
            android:title="@string/nav_Overview" />
        <item
            android:id="@+id/nav_weekProgram"
            android:icon="@drawable/week_program"
            android:title="@string/nav_WeekProgram" />
    </group>

</menu>
