<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PersonEdit">


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/btnAddPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="20dp"
        android:clickable="true"
        android:elevation="5dp"
        android:onClick="onClickSave"
        android:src="@android:drawable/ic_menu_save" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/avatar"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personName" />

        <EditText
            android:id="@+id/etPersonEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personCompanyName" />

        <EditText
            android:id="@+id/etPersonEditCompanyName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personEmail" />

        <EditText
            android:id="@+id/etPersonEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:inputType="none" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personRights"/>

        <EditText
            android:id="@+id/etPersonEditRights"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="NFC UID"/>

        <EditText
            android:id="@+id/etPersonEditNfcUid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personTask"/>

        <EditText
            android:id="@+id/etPersonEditTask"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnPersonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onClickDelete"
            android:text="@string/btnDeletePerson" />

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>